--- a/frontend/signuppage.html
+++ b/frontend/signuppage.html
@@ -6,10 +6,7 @@
     <title>Bluestock Sign-Up</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- External CSS -->
     <link rel="stylesheet" href="signuppage.css">
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <div class="container vh-100 d-flex justify-content-center align-items-center">
@@ -19,40 +16,30 @@
                 <h4 class="title">BLUESTOCK</h4>
             </div>
             <div class="header">
-                <h5 >Create an account</h5>
+                <h5>Create an account</h5>
             </div>
-            <form>
+            <form id="signup-form">
                 <div class="form-group">
                     <label for="name" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="name" name="name" placeholder="Saisha Wagh" required>
+                    <input type="text" class="form-control" id="name" name="name" required>
                 </div>
                 <div class="form-group">
                     <label for="email" class="form-label">Email Address</label>
-                    <input type="email" class="form-control" id="email" placeholder="hello@bluestock.in" required>
+                    <input type="email" class="form-control" id="email" name="email" required>
                 </div>
                 <div class="form-group">
-                    <div class="form-header">
-                        <label for="password" class="form-label">Password</label>
-                    </div>
+                    <label for="password" class="form-label">Password</label>
                     <div class="input-group">
-                        <input type="password" class="form-control" id="password" placeholder="********" required>
+                        <input type="password" class="form-control" id="password" name="password" required>
                         <span class="input-group-text" id="toggle-password">
-                            <img src="./assets/eye.jpg" alt="eye-image" class="eye-image">
+                            <img src="./assets/eye.jpg" alt="eye-icon" class="eye-image">
                         </span>
                     </div>
                 </div>
-                <p>
-                    By continuing, you agree to our <a href="#">terms of service</a>.
-                </p>
+                <p>By continuing, you agree to our <a href="#">terms of service</a>.</p>
                 <div class="robot-check">
-                    <div>
-                        <input type="checkbox" id="not-a-robot">
-                        <label for="not-a-robot">I'm not a robot</label>
-                    </div>
-                    <div class="recaptcha">
-                        <img src="./assets/Recaptcha.png" alt="captchaSymbol" class="recaptcha">
-                        <div class="g-recaptcha" data-sitekey="your_site_key"></div>
-                    </div>
+                    <input type="checkbox" id="not-a-robot">
+                    <label for="not-a-robot">I'm not a robot</label>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Sign up</button>
                 <div class="alternative">or sign in with</div>
@@ -66,6 +53,7 @@
             </form>
         </div>
     </div>
-    <script>src="signinpage.js"</script>
+
+    <script src="signuppage.js"></script>
 </body>
 </html>
