added the ipo-admin-dashboard with Ipo dashborad India(main)

--- a/frontend/UpcomingIpoTable.html
+++ b/frontend/UpcomingIpoTable.html
@@ -79,7 +79,7 @@
         <div class="main-content">
             <div class="content-header">
                 <h1>Upcoming IPO | Dashboard</h1>
-                <button class="register-btn">Register IPO</button>
+                <button class="register-btn" onclick="window.location.href='RegisterIPOmain.html'">Register IPO</button>
             </div>
 
             <div class="table-container">
